src/snapshots/ghqctoolkit__record__tests__record_closed_issue.snap
---
source: src/record.rs
expression: result.unwrap()
---
---
title: "QC Record: v1.0"
subtitle: "Git repository: repo"

author: "testuser"

date: "January 01, 2024"

header-includes:
  - \renewcommand{\familydefault}{\rmdefault}
  - \usepackage{sectsty}
  - \allsectionsfont{\normalfont\rmfamily}
  - \usepackage{float}
  - \usepackage{longtable}
  - \usepackage{booktabs}
  - \usepackage{makecell}
  - \usepackage{graphicx}
  - \usepackage{array}
  - \usepackage{fancyhdr}
  - \usepackage{xcolor}
  - \pagestyle{fancy}
  - \newcolumntype{R}[1]{>{\raggedright\arraybackslash}p{#1}}
  - \setlength{\headheight}{30pt}
  - \fancyfoot[C]{Page \thepage\ of \pageref{LastPage}}
  - \usepackage{lastpage}
  - \usepackage{microtype}
  - \usepackage{ragged2e}
  - \usepackage{fvextra}
  - \usepackage[normalem]{ulem}
  - \usepackage{listings}
  - \justifying
  - \sloppy
  - \lstset{breaklines=true}
  - \usepackage{titlesec}
  - \titleformat{\paragraph}[block]{\normalfont\normalsize\bfseries}{}{}{}
  - \titlespacing*{\paragraph}{0pt}{1ex plus .5ex minus .2ex}{.7ex}
  - \titleformat{\subparagraph}[block]{\normalfont\normalsize\bfseries}{}{}{}
  - \titlespacing*{\subparagraph}{0pt}{1ex plus .5ex minus .2ex}{.7ex}
  - \usepackage{fontspec}
  - \defaultfontfeatures{Ligatures=TeX}
  - \setmainfont{Times New Roman}
  - "% Cross-platform emoji font fallback: Apple Color Emoji (macOS), Noto Color Emoji (Linux), Segoe UI Emoji (Windows), Times New Roman (fallback)"
  - \IfFontExistsTF{Apple Color Emoji}{\newfontfamily\emojifont{Apple Color Emoji}[Renderer=HarfBuzz]}{\IfFontExistsTF{Noto Color Emoji}{\newfontfamily\emojifont{Noto Color Emoji}[Renderer=HarfBuzz]}{\IfFontExistsTF{Segoe UI Emoji}{\newfontfamily\emojifont{Segoe UI Emoji}[Renderer=HarfBuzz]}{\newfontfamily\emojifont{Times New Roman}}}}
  - \DeclareRobustCommand{\emoji}[1]{{\emojifont{#1}}}

format:
  pdf:
    pdf-engine: lualatex
    toc: true
    toc-depth: 2
    code-overflow: wrap
    fontsize: 12pt
---

\newpage

# Milestone Summary


\begin{longtable}{>{\raggedright\arraybackslash}p{0.20\textwidth}>{\raggedright\arraybackslash}p{0.20\textwidth}l>{\raggedright\arraybackslash}p{0.43\textwidth}}
\toprule
Title & Description & Status & Issues\\
\midrule
\endfirsthead
\multicolumn{4}{@{}l}{\textit{(continued)}}\\
\toprule
Title & Description & Status & Issues\\
\midrule
\endhead

\endfoot
\bottomrule
\multicolumn{4}{l}{\rule{0pt}{1em}\textcolor{red}{U} Unapproved Issue}\\
\multicolumn{4}{l}{\rule{0pt}{1em}\textcolor{red}{C} Issue with unchecked items}\\
\endlastfoot
v1.0 & First release
milestone & open & src/config.rs\\*

\end{longtable}



\newpage

# v1.0

## **Issue Summary**


\begin{longtable}{>{\raggedright\arraybackslash}p{7em}
                  >{\raggedright\arraybackslash}p{7em}
                  >{\raggedright\arraybackslash}p{7em}
                  >{\raggedright\arraybackslash}p{7em}
                  >{\raggedright\arraybackslash}p{7em}}
\toprule
File Path & QC Status & Author & QCer & Issue Closer\\
\midrule
\endfirsthead
\multicolumn{5}{@{}l}{\textit{(continued)}}\\
\toprule
File Path & QC Status & Author & QCer & Issue Closer\\
\midrule
\endhead

\endfoot
\bottomrule
\endlastfoot
src/config.rs & Approval required & Jane Developer & Alice Reviewer,\newline Bob Reviewer & NA\\*

\end{longtable}

\newpage



## src/config.rs

### **Issue Information**

* **Issue Number:** 2
* **Milestone:** `v1.0`
* **Created by:** Jane Developer (developer)
* **Created at:** 2011-04-22 14:33:48
* **QCer:** Alice Reviewer (reviewer1), Bob Reviewer (reviewer2)
* **QC Status:** Approval required
* **Test Checklist Summary:** 0/0 (100.0\%)
* **Git Status:** Up to date
* **Initial QC Commit:** 456def789abc012345678901234567890123cdef
* **Latest QC Commit:** 456def789abc012345678901234567890123cdef
* **Issue URL:** https://github.com/owner/repo/issues/2
* **Issue state:** Open

### **Issue Body**

Quality check issue for src/config.rs

#### Metadata
initial qc commit: 456def789abc012345678901234567890123cdef
git branch: feature/config-update
author: Jane Developer <developer@example.com>

### **Comments**


No comments found.


### **Events**



* 2011-04-20 10:00:00 - milestone set to 'v1.0' by John Maintainer (maintainer)

* 2011-04-20 10:15:00 - Alice Reviewer (reviewer1) assigned by John Maintainer (maintainer)

* 2011-04-20 10:30:00 - added label 'ghqc' by John Maintainer (maintainer)

* 2011-04-23 14:30:00 - closed by Alice Reviewer (reviewer1)



### **Detailed Timeline**



* 2011-04-20 10:00:00 - milestone set to 'v1.0' by John Maintainer (maintainer)

* 2011-04-20 10:15:00 - Alice Reviewer (reviewer1) assigned by John Maintainer (maintainer)

* 2011-04-20 10:30:00 - added label 'ghqc' by John Maintainer (maintainer)

* 2011-04-23 14:30:00 - closed by Alice Reviewer (reviewer1)



\newpage
