src/snapshots/ghqctoolkit__record__tests__record_empty_milestones.snap
---
source: src/record.rs
expression: result.unwrap()
---
---
title: "QC Record: "
subtitle: "Git repository: repo"

author: "testuser"

date: "January 01, 2024"

header-includes:
  - \renewcommand{\familydefault}{\rmdefault}
  - \usepackage{sectsty}
  - \allsectionsfont{\normalfont\rmfamily}
  - \usepackage{float}
  - \usepackage{longtable}
  - \usepackage{booktabs}
  - \usepackage{makecell}
  - \usepackage{graphicx}
  - \usepackage{array}
  - \usepackage{fancyhdr}
  - \usepackage{xcolor}
  - \pagestyle{fancy}
  - \newcolumntype{R}[1]{>{\raggedright\arraybackslash}p{#1}}
  - \setlength{\headheight}{30pt}
  - \fancyfoot[C]{Page \thepage\ of \pageref{LastPage}}
  - \usepackage{lastpage}
  - \usepackage{microtype}
  - \usepackage{ragged2e}
  - \usepackage{fvextra}
  - \usepackage[normalem]{ulem}
  - \usepackage{listings}
  - \justifying
  - \sloppy
  - \lstset{breaklines=true}
  - \usepackage{titlesec}
  - \titleformat{\paragraph}[block]{\normalfont\normalsize\bfseries}{}{}{}
  - \titlespacing*{\paragraph}{0pt}{1ex plus .5ex minus .2ex}{.7ex}
  - \titleformat{\subparagraph}[block]{\normalfont\normalsize\bfseries}{}{}{}
  - \titlespacing*{\subparagraph}{0pt}{1ex plus .5ex minus .2ex}{.7ex}
  - \usepackage{fontspec}
  - \defaultfontfeatures{Ligatures=TeX}
  - \setmainfont{Times New Roman}
  - "% Cross-platform emoji font fallback: Apple Color Emoji (macOS), Noto Color Emoji (Linux), Segoe UI Emoji (Windows), Times New Roman (fallback)"
  - \IfFontExistsTF{Apple Color Emoji}{\newfontfamily\emojifont{Apple Color Emoji}[Renderer=HarfBuzz]}{\IfFontExistsTF{Noto Color Emoji}{\newfontfamily\emojifont{Noto Color Emoji}[Renderer=HarfBuzz]}{\IfFontExistsTF{Segoe UI Emoji}{\newfontfamily\emojifont{Segoe UI Emoji}[Renderer=HarfBuzz]}{\newfontfamily\emojifont{Times New Roman}}}}
  - \DeclareRobustCommand{\emoji}[1]{{\emojifont{#1}}}

format:
  pdf:
    pdf-engine: lualatex
    toc: true
    toc-depth: 2
    code-overflow: wrap
    fontsize: 12pt
---

\newpage

# Milestone Summary


\begin{longtable}{>{\raggedright\arraybackslash}p{0.20\textwidth}>{\raggedright\arraybackslash}p{0.20\textwidth}l>{\raggedright\arraybackslash}p{0.43\textwidth}}
\toprule
Title & Description & Status & Issues\\
\midrule
\endfirsthead
\multicolumn{4}{@{}l}{\textit{(continued)}}\\
\toprule
Title & Description & Status & Issues\\
\midrule
\endhead

\endfoot
\bottomrule
\multicolumn{4}{l}{\rule{0pt}{1em}\textcolor{red}{U} Unapproved Issue}\\
\multicolumn{4}{l}{\rule{0pt}{1em}\textcolor{red}{C} Issue with unchecked items}\\
\endlastfoot


\end{longtable}
