src/snapshots/ghqctoolkit__record__tests__record_multiple_milestones.snap
---
source: src/record.rs
expression: result.unwrap()
---
---
title: "QC Record: v2.0, v1.0"
subtitle: "Git repository: repo"

author: "testuser"

date: "January 01, 2024"

header-includes:
  - \renewcommand{\familydefault}{\rmdefault}
  - \usepackage{sectsty}
  - \allsectionsfont{\normalfont\rmfamily}
  - \usepackage{float}
  - \usepackage{longtable}
  - \usepackage{booktabs}
  - \usepackage{makecell}
  - \usepackage{graphicx}
  - \usepackage{array}
  - \usepackage{fancyhdr}
  - \usepackage{xcolor}
  - \pagestyle{fancy}
  - \newcolumntype{R}[1]{>{\raggedright\arraybackslash}p{#1}}
  - \setlength{\headheight}{30pt}
  - \fancyfoot[C]{Page \thepage\ of \pageref{LastPage}}
  - \usepackage{lastpage}
  - \usepackage{microtype}
  - \usepackage{ragged2e}
  - \usepackage{fvextra}
  - \usepackage[normalem]{ulem}
  - \usepackage{listings}
  - \justifying
  - \sloppy
  - \lstset{breaklines=true}
  - \usepackage{titlesec}
  - \titleformat{\paragraph}[block]{\normalfont\normalsize\bfseries}{}{}{}
  - \titlespacing*{\paragraph}{0pt}{1ex plus .5ex minus .2ex}{.7ex}
  - \titleformat{\subparagraph}[block]{\normalfont\normalsize\bfseries}{}{}{}
  - \titlespacing*{\subparagraph}{0pt}{1ex plus .5ex minus .2ex}{.7ex}

format:
  pdf:
    pdf-engine: xelatex
    toc: true
    toc-depth: 2
    code-overflow: wrap
    mainfont: Times New Roman
---

\newpage

# Milestone Summary


\begin{longtable}{>{\raggedright\arraybackslash}p{0.20\textwidth}>{\raggedright\arraybackslash}p{0.20\textwidth}l>{\raggedright\arraybackslash}p{0.43\textwidth}}
\toprule
Title & Description & Status & Issues\\
\midrule
\endfirsthead
\multicolumn{4}{@{}l}{\textit{(continued)}}\\
\toprule
Title & Description & Status & Issues\\
\midrule
\endhead

\endfoot
\bottomrule
\multicolumn{4}{l}{\rule{0pt}{1em}\textcolor{red}{U} Unapproved Issue}\\
\multicolumn{4}{l}{\rule{0pt}{1em}\textcolor{red}{C} Issue with unchecked items}\\
\endlastfoot
v1.0 & First release
milestone & open & src/main.rs\newline \newline src/test.rs\\
\addlinespace\addlinespace
v2.0 & Second release
milestone & open & src/config.rs\\*

\end{longtable}



\newpage

# v2.0

## **Issue Summary**


\begin{longtable}{>{\raggedright\arraybackslash}p{7em}
                  >{\raggedright\arraybackslash}p{7em}
                  >{\raggedright\arraybackslash}p{7em}
                  >{\raggedright\arraybackslash}p{7em}
                  >{\raggedright\arraybackslash}p{7em}}
\toprule
File Path & QC Status & Author & QCer & Issue Closer\\
\midrule
\endfirsthead
\multicolumn{5}{@{}l}{\textit{(continued)}}\\
\toprule
File Path & QC Status & Author & QCer & Issue Closer\\
\midrule
\endhead

\endfoot
\bottomrule
\endlastfoot
src/config.rs & Awaiting approval & Jane Developer & Alice Reviewer,\newline Bob Reviewer & NA\\*

\end{longtable}

\newpage



## src/config.rs

### **Issue Information**

* **Issue Number:** 2
* **Milestone:** `v2.0`
* **Created by:** Jane Developer (developer)
* **Created at:** 2011-04-22 14:33:48
* **QCer:** Alice Reviewer (reviewer1), Bob Reviewer (reviewer2)
* **QC Status:** Awaiting approval
* **Test Checklist Summary:** 0/0 (100.0\%)
* **Git Status:** Up to date
* **Initial QC Commit:** 456def789abc012345678901234567890123cdef
* **Latest QC Commit:** 456def789abc012345678901234567890123cdef
* **Issue URL:** https://github.com/owner/repo/issues/2
* **Issue state:** Closed

### **Issue Body**

Quality check issue for src/config.rs

#### Metadata
initial qc commit: 456def789abc012345678901234567890123cdef
git branch: feature/config-update
author: Jane Developer <developer@example.com>

### **Comments**



#### 2011-04-22 15:00:00 - Comment by Alice Reviewer (reviewer1)

#### QC Notification

@developer @reviewer2

#### Metadata
current commit: 456def789abc012345678901234567890123cdef
previous commit: 123abc456def789012345678901234567890abcd

#### File Difference

Reviewing the configuration changes in src/config.rs:

- New configuration structure looks clean
- Validation logic is well implemented
- Consider adding more comprehensive error messages


#### 2011-04-22 16:15:00 - Comment by Bob Reviewer (reviewer2)

#### QC Notification

@developer

#### Metadata
current commit: 456def789abc012345678901234567890123cdef
previous commit: 123abc456def789012345678901234567890abcd

Agreed with @reviewer1's feedback. Additionally:

- The new config format is much more intuitive
- Migration path from old config is well handled
- Tests coverage looks comprehensive


#### 2011-04-23 09:00:00 - Comment by Jane Developer (developer)

#### QC Approve

#### Note

Thank you both @reviewer1 @reviewer2 for the thorough review!

I've implemented all suggested improvements:

✅ Enhanced error messages with detailed context
✅ Added backward compatibility warnings
✅ Expanded test suite with edge cases
✅ Updated documentation with migration guide

The configuration system is now ready for production use.




### **Events**



* 2011-04-22 14:30:00 - milestone set to 'v2.0' by Jane Developer (developer)

* 2011-04-22 14:31:00 - Alice Reviewer (reviewer1) assigned by Jane Developer (developer)

* 2011-04-22 14:32:00 - Bob Reviewer (reviewer2) assigned by Jane Developer (developer)

* 2011-04-22 14:33:00 - added label 'ghqc' by Jane Developer (developer)



### **Detailed Timeline**



* 2011-04-22 14:30:00 - milestone set to 'v2.0' by Jane Developer (developer)

* 2011-04-22 14:31:00 - Alice Reviewer (reviewer1) assigned by Jane Developer (developer)

* 2011-04-22 14:32:00 - Bob Reviewer (reviewer2) assigned by Jane Developer (developer)

* 2011-04-22 14:33:00 - added label 'ghqc' by Jane Developer (developer)

* 2011-04-22 15:00:00 - commented by Alice Reviewer (reviewer1)

* 2011-04-22 16:15:00 - commented by Bob Reviewer (reviewer2)

* 2011-04-23 09:00:00 - commented by Jane Developer (developer)



\newpage



\newpage

# v1.0

## **Issue Summary**


\begin{longtable}{>{\raggedright\arraybackslash}p{7em}
                  >{\raggedright\arraybackslash}p{7em}
                  >{\raggedright\arraybackslash}p{7em}
                  >{\raggedright\arraybackslash}p{7em}
                  >{\raggedright\arraybackslash}p{7em}}
\toprule
File Path & QC Status & Author & QCer & Issue Closer\\
\midrule
\endfirsthead
\multicolumn{5}{@{}l}{\textit{(continued)}}\\
\toprule
File Path & QC Status & Author & QCer & Issue Closer\\
\midrule
\endhead

\endfoot
\bottomrule
\endlastfoot
src/main.rs & Awaiting approval & John Maintainer & NA & NA\\
\addlinespace\addlinespace
src/test.rs & Awaiting approval & The Octocat & NA & NA\\*

\end{longtable}

\newpage



## src/main.rs

### **Issue Information**

* **Issue Number:** 3
* **Milestone:** `v1.0`
* **Created by:** John Maintainer (maintainer)
* **Created at:** 2011-04-22 15:33:48
* **QCer:** NA
* **QC Status:** Awaiting approval
* **Test Checklist Summary:** 0/0 (100.0\%)
* **Git Status:** Up to date
* **Initial QC Commit:** abc123def456789012345678901234567890abcd
* **Latest QC Commit:** abc123def456789012345678901234567890abcd
* **Issue URL:** https://github.com/owner/repo/issues/3
* **Issue state:** Closed

### **Issue Body**

Quality check issue for src/main.rs - critical changes

#### Metadata
initial qc commit: abc123def456789012345678901234567890abcd
git branch: main
author: John Maintainer <maintainer@example.com>

### **Comments**



#### 2011-04-22 16:00:00 - Comment by Alice Reviewer (reviewer1)

#### QC Notification

@maintainer

#### Metadata
current commit: abc123def456789012345678901234567890abcd
previous commit: def456789abc012345678901234567890123abcd

#### File Difference

Reviewed the critical changes in src/main.rs. The implementation looks good but needs a few adjustments:

- Error handling could be improved
- Add unit tests for the new functionality
- Documentation needs updating


#### 2011-04-22 17:30:00 - Comment by John Maintainer (maintainer)

#### QC Approve

#### Note

Thanks @reviewer1 for the feedback! I've addressed all the points:

✅ Improved error handling with proper Result types
✅ Added comprehensive unit tests
✅ Updated documentation with examples

The changes are ready for final review.




### **Events**



* 2011-04-22 15:30:00 - milestone set to 'v1.0' by John Maintainer (maintainer)

* 2011-04-22 15:31:00 - Alice Reviewer (reviewer1) assigned by John Maintainer (maintainer)

* 2011-04-22 15:32:00 - added label 'ghqc' by John Maintainer (maintainer)

* 2011-04-22 15:33:00 - added label 'urgent' by John Maintainer (maintainer)



### **Detailed Timeline**



* 2011-04-22 15:30:00 - milestone set to 'v1.0' by John Maintainer (maintainer)

* 2011-04-22 15:31:00 - Alice Reviewer (reviewer1) assigned by John Maintainer (maintainer)

* 2011-04-22 15:32:00 - added label 'ghqc' by John Maintainer (maintainer)

* 2011-04-22 15:33:00 - added label 'urgent' by John Maintainer (maintainer)

* 2011-04-22 16:00:00 - commented by Alice Reviewer (reviewer1)

* 2011-04-22 17:30:00 - commented by John Maintainer (maintainer)



\newpage

## src/test.rs

### **Issue Information**

* **Issue Number:** 1
* **Milestone:** `v1.0`
* **Created by:** The Octocat (octocat)
* **Created at:** 2011-04-22 13:33:48
* **QCer:** NA
* **QC Status:** Awaiting approval
* **Test Checklist Summary:** 0/0 (100.0\%)
* **Git Status:** Up to date
* **Initial QC Commit:** def456789abc012345678901234567890123abcd
* **Latest QC Commit:** def456789abc012345678901234567890123abcd
* **Issue URL:** https://github.com/owner/repo/issues/1
* **Issue state:** Closed

### **Issue Body**

Quality check issue for src/test.rs

#### Metadata
initial qc commit: def456789abc012345678901234567890123abcd
git branch: main
author: The Octocat <octocat@example.com>

### **Comments**



#### 2011-04-22 14:00:00 - Comment by The Octocat (octocat)

#### QC Notification

@maintainer

#### Metadata
current commit: def456789abc012345678901234567890123abcd
previous commit: abc123def456789012345678901234567890abcd

#### File Difference

Added comprehensive test suite for src/test.rs:

- Unit tests for all new functions
- Integration tests for end-to-end workflows  
- Edge case coverage improved significantly
- Performance benchmarks included

Ready for review!




### **Events**



* 2011-04-22 13:30:00 - milestone set to 'v1.0' by The Octocat (octocat)

* 2011-04-22 13:32:00 - added label 'ghqc' by The Octocat (octocat)



### **Detailed Timeline**



* 2011-04-22 13:30:00 - milestone set to 'v1.0' by The Octocat (octocat)

* 2011-04-22 13:32:00 - added label 'ghqc' by The Octocat (octocat)

* 2011-04-22 14:00:00 - commented by The Octocat (octocat)



\newpage
