src/snapshots/ghqctoolkit__record__tests__record_only_tables.snap
---
source: src/record.rs
expression: record_content
---
---
title: "QC Record: v1.0"
subtitle: "Git repository: repo"

author: "testuser"

date: "January 01, 2024"

header-includes:
  - \renewcommand{\familydefault}{\rmdefault}
  - \usepackage{sectsty}
  - \allsectionsfont{\normalfont\rmfamily}
  - \usepackage{float}
  - \usepackage{longtable}
  - \usepackage{booktabs}
  - \usepackage{makecell}
  - \usepackage{graphicx}
  - \usepackage{array}
  - \usepackage{fancyhdr}
  - \usepackage{xcolor}
  - \pagestyle{fancy}
  - \newcolumntype{R}[1]{>{\raggedright\arraybackslash}p{#1}}
  - \setlength{\headheight}{30pt}
  - \fancyfoot[C]{Page \thepage\ of \pageref{LastPage}}
  - \usepackage{lastpage}
  - \usepackage{microtype}
  - \usepackage{ragged2e}
  - \usepackage{fvextra}
  - \usepackage[normalem]{ulem}
  - \usepackage{listings}
  - \justifying
  - \sloppy
  - \lstset{breaklines=true}
  - \usepackage{titlesec}
  - \titleformat{\paragraph}[block]{\normalfont\normalsize\bfseries}{}{}{}
  - \titlespacing*{\paragraph}{0pt}{1ex plus .5ex minus .2ex}{.7ex}
  - \titleformat{\subparagraph}[block]{\normalfont\normalsize\bfseries}{}{}{}
  - \titlespacing*{\subparagraph}{0pt}{1ex plus .5ex minus .2ex}{.7ex}

format:
  pdf:
    pdf-engine: xelatex
    toc: true
    toc-depth: 2
    code-overflow: wrap
    mainfont: Times New Roman
---

\newpage

# Milestone Summary


\begin{longtable}{>{\raggedright\arraybackslash}p{0.20\textwidth}>{\raggedright\arraybackslash}p{0.20\textwidth}l>{\raggedright\arraybackslash}p{0.43\textwidth}}
\toprule
Title & Description & Status & Issues\\
\midrule
\endfirsthead
\multicolumn{4}{@{}l}{\textit{(continued)}}\\
\toprule
Title & Description & Status & Issues\\
\midrule
\endhead

\endfoot
\bottomrule
\multicolumn{4}{l}{\rule{0pt}{1em}\textcolor{red}{U} Unapproved Issue}\\
\multicolumn{4}{l}{\rule{0pt}{1em}\textcolor{red}{C} Issue with unchecked items}\\
\endlastfoot
v1.0 & First release
milestone & open & src/main.rs\newline \newline src/test.rs\\*

\end{longtable}



\newpage

# v1.0

## **Issue Summary**


\begin{longtable}{>{\raggedright\arraybackslash}p{7em}
                  >{\raggedright\arraybackslash}p{7em}
                  >{\raggedright\arraybackslash}p{7em}
                  >{\raggedright\arraybackslash}p{7em}
                  >{\raggedright\arraybackslash}p{7em}}
\toprule
File Path & QC Status & Author & QCer & Issue Closer\\
\midrule
\endfirsthead
\multicolumn{5}{@{}l}{\textit{(continued)}}\\
\toprule
File Path & QC Status & Author & QCer & Issue Closer\\
\midrule
\endhead

\endfoot
\bottomrule
\endlastfoot
src/main.rs & Awaiting approval & John Maintainer & NA & NA\\
\addlinespace\addlinespace
src/test.rs & Awaiting approval & The Octocat & NA & NA\\*

\end{longtable}

\newpage
