src/snapshots/ghqctoolkit__record__tests__record_reopened_issue.snap
---
source: src/record.rs
expression: result.unwrap()
---
---
title: "QC Record: v2.0"
subtitle: "Git repository: repo"

author: "testuser"

date: "January 01, 2024"

header-includes:
  - \renewcommand{\familydefault}{\rmdefault}
  - \usepackage{sectsty}
  - \allsectionsfont{\normalfont\rmfamily}
  - \usepackage{float}
  - \usepackage{longtable}
  - \usepackage{booktabs}
  - \usepackage{makecell}
  - \usepackage{graphicx}
  - \usepackage{array}
  - \usepackage{fancyhdr}
  - \usepackage{xcolor}
  - \pagestyle{fancy}
  - \newcolumntype{R}[1]{>{\raggedright\arraybackslash}p{#1}}
  - \setlength{\headheight}{30pt}
  - \fancyfoot[C]{Page \thepage\ of \pageref{LastPage}}
  - \usepackage{lastpage}
  - \usepackage{microtype}
  - \usepackage{ragged2e}
  - \usepackage{fvextra}
  - \usepackage[normalem]{ulem}
  - \usepackage{listings}
  - \justifying
  - \sloppy
  - \lstset{breaklines=true}
  - \usepackage{titlesec}
  - \titleformat{\paragraph}[block]{\normalfont\normalsize\bfseries}{}{}{}
  - \titlespacing*{\paragraph}{0pt}{1ex plus .5ex minus .2ex}{.7ex}
  - \titleformat{\subparagraph}[block]{\normalfont\normalsize\bfseries}{}{}{}
  - \titlespacing*{\subparagraph}{0pt}{1ex plus .5ex minus .2ex}{.7ex}

format:
  pdf:
    pdf-engine: xelatex
    toc: true
    toc-depth: 2
    code-overflow: wrap
    mainfont: Times New Roman
---

\newpage

# Milestone Summary


\begin{longtable}{>{\raggedright\arraybackslash}p{0.20\textwidth}>{\raggedright\arraybackslash}p{0.20\textwidth}l>{\raggedright\arraybackslash}p{0.43\textwidth}}
\toprule
Title & Description & Status & Issues\\
\midrule
\endfirsthead
\multicolumn{4}{@{}l}{\textit{(continued)}}\\
\toprule
Title & Description & Status & Issues\\
\midrule
\endhead

\endfoot
\bottomrule
\multicolumn{4}{l}{\rule{0pt}{1em}\textcolor{red}{U} Unapproved Issue}\\
\multicolumn{4}{l}{\rule{0pt}{1em}\textcolor{red}{C} Issue with unchecked items}\\
\endlastfoot
v2.0 & Second release
milestone & open & src/test.rs\\*

\end{longtable}



\newpage

# v2.0

## **Issue Summary**


\begin{longtable}{>{\raggedright\arraybackslash}p{7em}
                  >{\raggedright\arraybackslash}p{7em}
                  >{\raggedright\arraybackslash}p{7em}
                  >{\raggedright\arraybackslash}p{7em}
                  >{\raggedright\arraybackslash}p{7em}}
\toprule
File Path & QC Status & Author & QCer & Issue Closer\\
\midrule
\endfirsthead
\multicolumn{5}{@{}l}{\textit{(continued)}}\\
\toprule
File Path & QC Status & Author & QCer & Issue Closer\\
\midrule
\endhead

\endfoot
\bottomrule
\endlastfoot
src/test.rs & Awaiting approval & The Octocat & NA & Bob Reviewer\\*

\end{longtable}

\newpage



## src/test.rs

### **Issue Information**

* **Issue Number:** 1
* **Milestone:** `v2.0`
* **Created by:** The Octocat (octocat)
* **Created at:** 2011-04-22 13:33:48
* **QCer:** NA
* **QC Status:** Awaiting approval
* **Test Checklist Summary:** 0/0 (100.0\%)
* **Git Status:** Local changes
* **Initial QC Commit:** def456789abc012345678901234567890123abcd
* **Latest QC Commit:** def456789abc012345678901234567890123abcd
* **Issue URL:** https://github.com/owner/repo/issues/1
* **Issue state:** Closed

* **Closed by:** Bob Reviewer (reviewer2)
* **Closed at:** 

### **Issue Body**

Quality check issue for src/test.rs

#### Metadata
initial qc commit: def456789abc012345678901234567890123abcd
git branch: main
author: The Octocat <octocat@example.com>

### **Comments**


No comments found.


### **Events**



* 2011-04-18 09:00:00 - milestone set to 'v2.0' by John Maintainer (maintainer)

* 2011-04-18 09:15:00 - Bob Reviewer (reviewer2) assigned by John Maintainer (maintainer)

* 2011-04-19 12:00:00 - closed by Bob Reviewer (reviewer2)

* 2011-04-19 16:00:00 - reopened by John Maintainer (maintainer)



### **Detailed Timeline**



* 2011-04-18 09:00:00 - milestone set to 'v2.0' by John Maintainer (maintainer)

* 2011-04-18 09:15:00 - Bob Reviewer (reviewer2) assigned by John Maintainer (maintainer)

* 2011-04-19 12:00:00 - closed by Bob Reviewer (reviewer2)

* 2011-04-19 16:00:00 - reopened by John Maintainer (maintainer)



\newpage
